<resources>
    <string name="app_name">Practica4-2-Almacenamiento</string>
    <string name="contact_name">Nombre de contacto</string>
    <string name="contact_phone">Teléfono de contacto</string>
    <string name="email">Correo de contacto</string>
    <string name="save">Guardar</string>
    <string name="recover">Recuperar</string>
    <string name="preferences">Preferencias</string>
    <string name="background_color">Color de fondo</string>
    <string name="text_color">Color de letra</string>
    <string name="guardar_preferencias">Guardar preferencias</string>
</resources>